test/ui/src/compile_fail/std/dbg_props_duplicate.rs
fn main() {
    emit::dbg!(a: 42, a: true);
}
